Setup http only jwt Update all controllers and schema User only google_id
