# src/modules/car/dto/update-car.dto.ts
@@ -1,4 +1,7 @@
 import { PartialType } from '@nestjs/mapped-types';
 import { AddCarDto } from './add-car.dto';
+import { ApiProperty } from '@nestjs/swagger';
 
-export class UpdateCarDto extends PartialType(AddCarDto) {}
+export class UpdateCarDto extends PartialType(AddCarDto) {
+
+}
